Correção da linha 129

--- a/src/main/webapp/pages/aluno/save.xhtml
+++ b/src/main/webapp/pages/aluno/save.xhtml
@@ -126,7 +126,7 @@
 				styleClass="negrito"/>
 				
 			<p:commandButton 
-				actionListener="#{alunoMB.onSave}"                                    onSave}"
+				actionListener="#{alunoMB.onSave}"
 				value="Salvar"
 				update=":msgs form" />
 		</h:panelGrid>
